--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-tooltip": "^4.4.2",
+    "redux": "^4.2.0",
     "three": "^0.145.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
