--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.11.66",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.3",
     "core-js": "^3.25.5",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
@@ -56,5 +57,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
