--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-tooltip": "^4.4.2",
     "redux": "^4.2.0",
     "three": "^0.145.0",
+    "toastr": "^2.1.4",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
