--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.25.5",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
