--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-alert": "^7.0.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
