--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-tooltip": "^4.4.2",
     "redux": "^4.2.0",
+    "sweetalert2": "^11.6.9",
     "three": "^0.145.0",
     "toastr": "^2.1.4",
     "typescript": "^4.8.4",
